[gd_scene load_steps=4 format=3 uid="uid://de6tm2ghvjhwk"]

[ext_resource type="Script" uid="uid://cn5fijjf0lwfb" path="res://prog_82a.gd" id="1_peix8"]
[ext_resource type="LabelSettings" uid="uid://ba61jrjv4u1in" path="res://Big Font Centered.tres" id="2_1ebgm"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="3_2t2km"]

[node name="Prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_peix8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 76.0
offset_right = 363.0
offset_bottom = 152.0
text = "Speed Limit:"
label_settings = ExtResource("2_1ebgm")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 179.0
offset_right = 438.0
offset_bottom = 255.0
text = "Vehicle Speed:"
label_settings = ExtResource("2_1ebgm")
vertical_alignment = 1

[node name="lblFine" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 321.0
offset_right = 438.0
offset_bottom = 397.0
text = "Fine: $"
label_settings = ExtResource("2_1ebgm")
vertical_alignment = 1

[node name="txtLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 88.0
offset_right = 897.0
offset_bottom = 159.0
theme = ExtResource("3_2t2km")

[node name="txtSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 188.0
offset_right = 897.0
offset_bottom = 259.0
theme = ExtResource("3_2t2km")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 443.0
offset_right = 344.0
offset_bottom = 536.0
theme = ExtResource("3_2t2km")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 443.0
offset_right = 662.0
offset_bottom = 536.0
theme = ExtResource("3_2t2km")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 440.0
offset_right = 995.0
offset_bottom = 533.0
theme = ExtResource("3_2t2km")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
